--- a/okchem.com/release/scss/websites.scss
+++ b/okchem.com/release/scss/websites.scss
@@ -40,11 +40,8 @@ $-font-numbers: (
     @if ($o-theme-navbar-font-number != $o-theme-font-number) {
         font-family: nth($o-theme-fonts, $o-theme-navbar-font-number);
     }
-    .nav>.nav-item:nth-child(3)>ul>li:first-child {
-        background-color: red;
-    }
-    .nav>.nav-item:nth-child(4)>ul>li:first-child {
-        background-color: blue;
+    .nav>.dropdown>ul>li>a[href='/#'] {
+        font-weight: 700;
     }
     .nav-item {
         transition: opacity 1000ms ease 0s;
